# clion_conan

./: .gitignore  LICENSE  package_files.py
boost_poco_md5/: CMakeLists.txt  commands_to_run.txt  conanfile.txt  demo.cpp
chat/: CMakeLists.txt  conanfile.py
chat/src/: CMakeLists.txt  chat.cpp  chat.h
chat/test_package/: conanfile.py
hello/: CMakeLists.txt  conanfile.py
hello/src/: CMakeLists.txt
hello/test_package/: conanfile.py
social/: CMakeLists.txt  conanfile.txt  social.cpp
